# teleflux

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
config/: config.yml.example  docker-build.env.example
scripts/: build-docker.sh
teleflux/: __init__.py  __main__.py  cli.py  config.py  miniflux_client.py  notifier.py  sync.py  telegram_client.py
tests/: __init__.py  test_cli.py  test_config.py  test_miniflux_client.py  test_notifier.py  test_sync.py  test_telegram_client.py
